# ccpu-cc

./: Cargo.toml  LICENSE  README.md
ccpu-runtime/: app_startup.asm  divide32.asm  memcpy.asm  rom_startup.asm  runtime.asm
example/: .gitignore  Makefile  app.yaml  hello.app  hello.c  rom.yaml
src/: attribute.rs  block_emitter.rs  builtin.rs  cmdline.rs  compile.rs  constant.rs  ctype.rs  deconstruct.rs  enums.rs  error.rs  flush.rs  function.rs  generic_ir.rs  graph.rs  initializer.rs  ir.rs  lvalue.rs  machine.rs  main.rs  name_scope.rs  object_location.rs  offsetof.rs  preprocess.rs  regalloc.rs  register.rs  rvalue.rs  ssa.rs  stats.rs  string.rs  struct_union.rs  tagged.rs  temp_reg.rs  translation_unit.rs  type_builder.rs  type_registry.rs  utils.rs
src/ccpu/: gen.rs  global.rs  instr.rs  intrin.rs  mod.rs  object.rs  reg.rs  stack.rs
src/ccpu/opt/: frame.rs
src/compile/: add.rs  assign.rs  binary.rs  member.rs  relational.rs  shift.rs  sizeof.rs  sub.rs  unary.rs
src/opt/: arithmetic.rs  blocks.rs  compute.rs  condition.rs  const_propagate.rs  copy.rs  mod.rs  ssa.rs  util.rs  width.rs
src/test/: add.rs  assign.rs  cast.rs  constant.rs  controlflow.rs  deconstruct.rs  lvalue.rs  member.rs  mod.rs  object.rs  regalloc.rs  relational.rs  shift.rs  sizeof.rs  sub.rs  types.rs  unary.rs  util.rs
tests/: add.rs  arrayptr.rs  bool.rs  bswap.rs  compare.rs  cond.rs  conv.rs  div.rs  mul.rs  neg.rs  object.rs  rsim-stack.yaml  shift.rs  struct_initializers.rs  struct_param.rs  struct_union.rs  switch.rs  variadic.rs
