[package]
name = "ccpu-cc"
version = "0.1.0"
edition = "2021"

[dependencies]
lang-c = "0.15.1"
static_assertions = "1.1.0"
bitflags = "1.3"
replace_with = "0.1.7"
num-traits = "0.2"
num = "0.4"
rand = "0.8.5"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0.12"
